Added Team and initial endpoint

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "BalldontlieApi": {
+    "BaseUrl": "https://api.balldontlie.io/v1/",
+    "ApiKey": "b8a80564-b700-453a-a40c-dfe2fdc5622d",
+    "PageSize": 100
+  }
 }
