Added Ability to fetch and update teams from apis to db

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -16,5 +16,11 @@
     "BaseUrl": "https://api.balldontlie.io/v1/",
     "ApiKey": "b8a80564-b700-453a-a40c-dfe2fdc5622d",
     "PageSize": 100
+  },
+  "NBA_API": {
+    "BaseUrl": "https://api-nba-v1.p.rapidapi.com/",
+    "ApiKey": "d129c3484cmsh97d2cc7aba9a5c9p1a8aecjsnf8d3050db780",
+    "ApiHost": "api-nba-v1.p.rapidapi.com",
+    "PageSize": 100
   }
 }
