getting map of external id works only on when entering step 1 in GetNewOrUpdatedPlayersAsync

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,7 +11,9 @@
     }
   },
   "AllowedHosts": "*",
-
+  "SyncSettings": {
+    "ActiveSeasonsBack": 1
+  },
   "BalldontlieApi": {
     "BaseUrl": "https://api.balldontlie.io/v1/",
     "ApiKey": "b8a80564-b700-453a-a40c-dfe2fdc5622d",
